// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerticalNav renders properly in mobile mode 1`] = `
Array [
  <nav
    class="navbar navbar-pf-vertical"
  >
    <div
      class="navbar-header"
    >
      <button
        class="navbar-toggle collapsed"
        type="button"
      >
        <span
          class="sr-only"
        >
          Toggle navigation
        </span>
        <span
          class="icon-bar"
        />
        <span
          class="icon-bar"
        />
        <span
          class="icon-bar"
        />
      </button>
      <span
        class="navbar-brand"
      >
        <span>
          <span
            class="navbar-brand-txt"
          >
            Patternfly React
          </span>
        </span>
      </span>
    </div>
  </nav>,
  <div
    class="nav-pf-vertical nav-pf-vertical-with-sub-menus nav-pf-vertical-with-badges nav-pf-persistent-secondary hidden"
  >
    <ul
      class="list-group"
    >
      <li
        class="active list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-home"
            title="Item 1"
          />
          <span
            class="list-group-item-value"
          >
            Item 1
          </span>
          <div
            class="badge-container-pf"
          >
            <div
              class="badge"
            >
              <span>
                42
              </span>
            </div>
          </div>
        </a>
      </li>
      <li
        class="secondary-nav-item-pf list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-star"
            title="Item 2"
          />
          <span
            class="list-group-item-value"
          >
            Item 2
          </span>
          <div
            class="badge-container-pf"
          />
        </a>
        <div
          class="nav-pf-secondary-nav"
        >
          <div
            class="nav-item-pf-header"
          >
            <a
              class="secondary-collapse-toggle-pf"
            />
            <span>
              Item 2
            </span>
          </div>
          <ul
            class="list-group"
          >
            <li
              class="list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 2-A
                </span>
                <div
                  class="badge-container-pf"
                >
                  <div
                    class="badge"
                  >
                    <span>
                      9999
                    </span>
                  </div>
                </div>
              </a>
            </li>
            <li
              class="list-group-item"
            >
              <a
                href="http://www.patternfly.org"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 2-B (external link)
                </span>
              </a>
            </li>
            <li
              class="list-group-item"
            >
              <span
                class="vertical-sub-header-pf"
              >
                Divider
              </span>
            </li>
            <li
              class="list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 2-C
                </span>
              </a>
            </li>
          </ul>
        </div>
      </li>
      <li
        class="secondary-nav-item-pf list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-info-circle"
            title="Item 3"
          />
          <span
            class="list-group-item-value"
          >
            Item 3
          </span>
          <div
            class="badge-container-pf"
          />
        </a>
        <div
          class="nav-pf-secondary-nav"
        >
          <div
            class="nav-item-pf-header"
          >
            <a
              class="secondary-collapse-toggle-pf"
            />
            <span>
              Item 3
            </span>
          </div>
          <ul
            class="list-group"
          >
            <li
              class="list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-A
                </span>
              </a>
            </li>
            <li
              class="list-group-item"
            >
              <span
                class="vertical-sub-header-pf"
              >
                Divider
              </span>
            </li>
            <li
              class="tertiary-nav-item-pf list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-B
                </span>
                <div
                  class="badge-container-pf"
                />
              </a>
              <div
                class="nav-pf-tertiary-nav"
              >
                <div
                  class="nav-item-pf-header"
                >
                  <a
                    class="tertiary-collapse-toggle-pf"
                  />
                  <span>
                    Item 3-B
                  </span>
                </div>
                <ul
                  class="list-group"
                >
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-B-i
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-B-ii
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-B-iii
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </li>
            <li
              class="list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-C
                </span>
              </a>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </div>,
]
`;

exports[`VerticalNav renders properly with a custom className on a nav item 1`] = `
Array [
  <nav
    class="navbar navbar-pf-vertical"
  >
    <div
      class="navbar-header"
    >
      <button
        class="navbar-toggle collapsed"
        type="button"
      >
        <span
          class="sr-only"
        >
          Toggle navigation
        </span>
        <span
          class="icon-bar"
        />
        <span
          class="icon-bar"
        />
        <span
          class="icon-bar"
        />
      </button>
      <span
        class="navbar-brand"
      >
        <span>
          <span
            class="navbar-brand-txt"
          >
            Patternfly React
          </span>
        </span>
      </span>
    </div>
  </nav>,
  <div
    class="nav-pf-vertical nav-pf-vertical-with-sub-menus nav-pf-vertical-with-badges nav-pf-persistent-secondary"
  >
    <ul
      class="list-group"
    >
      <li
        class="active my-custom-item list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-home"
            title="Item 1"
          />
          <span
            class="list-group-item-value"
          >
            Item 1
          </span>
          <div
            class="badge-container-pf"
          >
            <div
              class="badge"
            >
              <span>
                42
              </span>
            </div>
          </div>
        </a>
      </li>
      <li
        class="secondary-nav-item-pf list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-star"
            title="Item 2"
          />
          <span
            class="list-group-item-value"
          >
            Item 2
          </span>
          <div
            class="badge-container-pf"
          />
        </a>
        <div
          class="nav-pf-secondary-nav"
        >
          <div
            class="nav-item-pf-header"
          >
            <span>
              Item 2
            </span>
          </div>
          <ul
            class="list-group"
          >
            <li
              class="list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 2-A
                </span>
                <div
                  class="badge-container-pf"
                >
                  <div
                    class="badge"
                  >
                    <span>
                      9999
                    </span>
                  </div>
                </div>
              </a>
            </li>
            <li
              class="list-group-item"
            >
              <a
                href="http://www.patternfly.org"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 2-B (external link)
                </span>
              </a>
            </li>
            <li
              class="list-group-item"
            >
              <span
                class="vertical-sub-header-pf"
              >
                Divider
              </span>
            </li>
            <li
              class="list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 2-C
                </span>
              </a>
            </li>
          </ul>
        </div>
      </li>
      <li
        class="secondary-nav-item-pf list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-info-circle"
            title="Item 3"
          />
          <span
            class="list-group-item-value"
          >
            Item 3
          </span>
          <div
            class="badge-container-pf"
          />
        </a>
        <div
          class="nav-pf-secondary-nav"
        >
          <div
            class="nav-item-pf-header"
          >
            <span>
              Item 3
            </span>
          </div>
          <ul
            class="list-group"
          >
            <li
              class="list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-A
                </span>
              </a>
            </li>
            <li
              class="list-group-item"
            >
              <span
                class="vertical-sub-header-pf"
              >
                Divider
              </span>
            </li>
            <li
              class="tertiary-nav-item-pf list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-B
                </span>
                <div
                  class="badge-container-pf"
                />
              </a>
              <div
                class="nav-pf-tertiary-nav"
              >
                <div
                  class="nav-item-pf-header"
                >
                  <span>
                    Item 3-B
                  </span>
                </div>
                <ul
                  class="list-group"
                >
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-B-i
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-B-ii
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-B-iii
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </li>
            <li
              class="list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-C
                </span>
              </a>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </div>,
]
`;

exports[`VerticalNav renders properly with item children 1`] = `
Array [
  <nav
    class="navbar navbar-pf-vertical"
  >
    <div
      class="navbar-header"
    >
      <button
        class="navbar-toggle collapsed"
        type="button"
      >
        <span
          class="sr-only"
        >
          Toggle navigation
        </span>
        <span
          class="icon-bar"
        />
        <span
          class="icon-bar"
        />
        <span
          class="icon-bar"
        />
      </button>
      <span
        class="navbar-brand"
      >
        <span>
          <span
            class="navbar-brand-txt"
          >
            Patternfly React
          </span>
        </span>
      </span>
    </div>
  </nav>,
  <div
    class="nav-pf-vertical nav-pf-vertical-with-sub-menus nav-pf-vertical-with-badges nav-pf-persistent-secondary"
  >
    <ul
      class="list-group"
    >
      <li
        class="active list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-home"
            title="Item 1"
          />
          <span
            class="list-group-item-value"
          >
            Item 1
          </span>
          <div
            class="badge-container-pf"
          >
            <div
              class="badge"
            >
              <span>
                42
              </span>
            </div>
          </div>
        </a>
      </li>
      <li
        class="secondary-nav-item-pf list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-star"
            title="Item 2"
          />
          <span
            class="list-group-item-value"
          >
            Item 2
          </span>
          <div
            class="badge-container-pf"
          />
        </a>
        <div
          class="nav-pf-secondary-nav"
        >
          <div
            class="nav-item-pf-header"
          >
            <span>
              Item 2
            </span>
          </div>
          <ul
            class="list-group"
          >
            <li
              class="list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 2-A
                </span>
                <div
                  class="badge-container-pf"
                >
                  <div
                    class="badge"
                  >
                    <span>
                      9999
                    </span>
                  </div>
                </div>
              </a>
            </li>
            <li
              class="list-group-item"
            >
              <a
                href="http://www.patternfly.org"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 2-B (external link)
                </span>
              </a>
            </li>
            <li
              class="list-group-item"
            >
              <span
                class="vertical-sub-header-pf"
              >
                Divider
              </span>
            </li>
            <li
              class="list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 2-C
                </span>
              </a>
            </li>
          </ul>
        </div>
      </li>
      <li
        class="secondary-nav-item-pf list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-info-circle"
            title="Item 3"
          />
          <span
            class="list-group-item-value"
          >
            Item 3
          </span>
          <div
            class="badge-container-pf"
          />
        </a>
        <div
          class="nav-pf-secondary-nav"
        >
          <div
            class="nav-item-pf-header"
          >
            <span>
              Item 3
            </span>
          </div>
          <ul
            class="list-group"
          >
            <li
              class="list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-A
                </span>
              </a>
            </li>
            <li
              class="list-group-item"
            >
              <span
                class="vertical-sub-header-pf"
              >
                Divider
              </span>
            </li>
            <li
              class="tertiary-nav-item-pf list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-B
                </span>
                <div
                  class="badge-container-pf"
                />
              </a>
              <div
                class="nav-pf-tertiary-nav"
              >
                <div
                  class="nav-item-pf-header"
                >
                  <span>
                    Item 3-B
                  </span>
                </div>
                <ul
                  class="list-group"
                >
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-B-i
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-B-ii
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-B-iii
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </li>
            <li
              class="list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-C
                </span>
              </a>
            </li>
          </ul>
        </div>
      </li>
    </ul>
  </div>,
]
`;

exports[`VerticalNav renders properly with item objects 1`] = `
Array [
  <nav
    class="navbar navbar-pf-vertical"
  >
    <div
      class="navbar-header"
    >
      <button
        class="navbar-toggle collapsed"
        type="button"
      >
        <span
          class="sr-only"
        >
          Toggle navigation
        </span>
        <span
          class="icon-bar"
        />
        <span
          class="icon-bar"
        />
        <span
          class="icon-bar"
        />
      </button>
      <span
        class="navbar-brand"
      >
        <span>
          <img
            alt=""
            class="navbar-brand-icon"
            src="../../../storybook/img/logo-alt.svg"
          />
          <img
            alt=""
            class="navbar-brand-name"
            src="../../../storybook/img/brand-alt.svg"
          />
        </span>
      </span>
    </div>
    <nav
      class="collapse navbar-collapse"
    >
      <ul
        class="navbar-iconic nav navbar-nav navbar-right"
      >
        <li
          class="drawer-pf-trigger"
        >
          <a
            class="nav-item-iconic"
          >
            <span
              aria-hidden="true"
              class="fa fa-bell"
            />
          </a>
        </li>
        <li
          class="dropdown"
        >
          <a
            aria-expanded="false"
            aria-haspopup="true"
            class="nav-item-iconic dropdown-toggle"
            href="#"
            id="help"
            role="button"
          >
            <span
              aria-hidden="true"
              class="pficon pficon-help"
            />
             
            <span
              class="caret"
            />
          </a>
          <ul
            aria-labelledby="help"
            class="dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Help
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                About
              </a>
            </li>
          </ul>
        </li>
        <li
          class="dropdown"
        >
          <a
            aria-expanded="false"
            aria-haspopup="true"
            class="nav-item-iconic dropdown-toggle"
            href="#"
            id="user"
            role="button"
          >
            <span
              aria-hidden="true"
              class="pficon pficon-user"
            />
             Brian Johnson 
            <span
              class="caret"
            />
          </a>
          <ul
            aria-labelledby="user"
            class="dropdown-menu"
            role="menu"
          >
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Preferences
              </a>
            </li>
            <li
              class=""
              role="presentation"
            >
              <a
                href="#"
                role="menuitem"
                tabindex="-1"
              >
                Logout
              </a>
            </li>
          </ul>
        </li>
      </ul>
    </nav>
  </nav>,
  <div
    class="nav-pf-vertical nav-pf-vertical-with-sub-menus nav-pf-vertical-collapsible-menus nav-pf-persistent-secondary"
  >
    <ul
      class="list-group"
    >
      <li
        class="secondary-nav-item-pf active list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-dashboard"
            title="Dashboard"
          />
          <span
            class="list-group-item-value"
          >
            Dashboard
          </span>
        </a>
        <div
          class="nav-pf-secondary-nav"
        >
          <div
            class="nav-item-pf-header"
          >
            <a
              class="secondary-collapse-toggle-pf"
            />
            <span>
              Dashboard
            </span>
          </div>
          <ul
            class="list-group"
          >
            <li
              class="tertiary-nav-item-pf list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 1-A
                </span>
              </a>
              <div
                class="nav-pf-tertiary-nav"
              >
                <div
                  class="nav-item-pf-header"
                >
                  <a
                    class="tertiary-collapse-toggle-pf"
                  />
                  <span>
                    Item 1-A
                  </span>
                </div>
                <ul
                  class="list-group"
                >
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-A-i
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-A-ii
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-A-iii
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </li>
            <li
              class="list-group-item"
            >
              <span
                class="vertical-sub-header-pf"
              >
                Divider 1
              </span>
            </li>
            <li
              class="tertiary-nav-item-pf list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 1-B
                </span>
              </a>
              <div
                class="nav-pf-tertiary-nav"
              >
                <div
                  class="nav-item-pf-header"
                >
                  <a
                    class="tertiary-collapse-toggle-pf"
                  />
                  <span>
                    Item 1-B
                  </span>
                </div>
                <ul
                  class="list-group"
                >
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-B-i
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-B-ii
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-B-iii
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </li>
            <li
              class="tertiary-nav-item-pf list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 1-B-2
                </span>
              </a>
              <div
                class="nav-pf-tertiary-nav"
              >
                <div
                  class="nav-item-pf-header"
                >
                  <a
                    class="tertiary-collapse-toggle-pf"
                  />
                  <span>
                    Item 1-B-2
                  </span>
                </div>
                <ul
                  class="list-group"
                >
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-B-i
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-B-ii
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-B-iii
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </li>
            <li
              class="list-group-item"
            >
              <span
                class="vertical-sub-header-pf"
              >
                Divider 2
              </span>
            </li>
            <li
              class="tertiary-nav-item-pf list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 1-D
                </span>
              </a>
              <div
                class="nav-pf-tertiary-nav"
              >
                <div
                  class="nav-item-pf-header"
                >
                  <a
                    class="tertiary-collapse-toggle-pf"
                  />
                  <span>
                    Item 1-D
                  </span>
                </div>
                <ul
                  class="list-group"
                >
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-D-i
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-D-ii
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-D-iii
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
      <li
        class="list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-shield"
            title="Dolor"
          />
          <span
            class="list-group-item-value"
          >
            Dolor
          </span>
        </a>
      </li>
      <li
        class="secondary-nav-item-pf list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-space-shuttle"
            title="Ipsum"
          />
          <span
            class="list-group-item-value"
          >
            Ipsum
          </span>
        </a>
        <div
          class="nav-pf-secondary-nav"
        >
          <div
            class="nav-item-pf-header"
          >
            <a
              class="secondary-collapse-toggle-pf"
            />
            <span>
              Ipsum
            </span>
          </div>
          <ul
            class="list-group"
          >
            <li
              class="list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-A
                </span>
              </a>
            </li>
            <li
              class="list-group-item"
            >
              <a
                href="http://www.patternfly.org"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-B (external link)
                </span>
              </a>
            </li>
            <li
              class="tertiary-nav-item-pf list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-C
                </span>
              </a>
              <div
                class="nav-pf-tertiary-nav"
              >
                <div
                  class="nav-item-pf-header"
                >
                  <a
                    class="tertiary-collapse-toggle-pf"
                  />
                  <span>
                    Item 3-C
                  </span>
                </div>
                <ul
                  class="list-group"
                >
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-C-i
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-C-ii
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-C-iii
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
      <li
        class="list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-paper-plane"
            title="Amet"
          />
          <span
            class="list-group-item-value"
          >
            Amet
          </span>
        </a>
      </li>
      <li
        class="list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-graduation-cap"
            title="Adipscing"
          />
          <span
            class="list-group-item-value"
          >
            Adipscing
          </span>
        </a>
      </li>
      <li
        class="list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-gamepad"
            title="Lorem"
          />
          <span
            class="list-group-item-value"
          >
            Lorem
          </span>
        </a>
      </li>
    </ul>
  </div>,
]
`;

exports[`VerticalNav renders properly with masthead PF component 1`] = `
Array [
  <nav
    class="navbar navbar-pf-vertical"
  >
    <div
      class="navbar-header"
    >
      <button
        class="navbar-toggle"
      >
        <span
          class="sr-only"
        >
          Toggle navigation
        </span>
        <span
          aria-hidden="true"
          class="icon-bar"
        />
        <span
          aria-hidden="true"
          class="icon-bar"
        />
        <span
          aria-hidden="true"
          class="icon-bar"
        />
      </button>
      <a
        class="navbar-brand"
        href="#"
        role="button"
      />
    </div>
  </nav>,
  <div
    class="nav-pf-vertical nav-pf-vertical-with-sub-menus nav-pf-persistent-secondary"
  >
    <ul
      class="list-group"
    >
      <li
        class="secondary-nav-item-pf active list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-dashboard"
            title="Dashboard"
          />
          <span
            class="list-group-item-value"
          >
            Dashboard
          </span>
        </a>
        <div
          class="nav-pf-secondary-nav"
        >
          <div
            class="nav-item-pf-header"
          >
            <span>
              Dashboard
            </span>
          </div>
          <ul
            class="list-group"
          >
            <li
              class="tertiary-nav-item-pf list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 1-A
                </span>
              </a>
              <div
                class="nav-pf-tertiary-nav"
              >
                <div
                  class="nav-item-pf-header"
                >
                  <span>
                    Item 1-A
                  </span>
                </div>
                <ul
                  class="list-group"
                >
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-A-i
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-A-ii
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-A-iii
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </li>
            <li
              class="list-group-item"
            >
              <span
                class="vertical-sub-header-pf"
              >
                Divider 1
              </span>
            </li>
            <li
              class="tertiary-nav-item-pf list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 1-B
                </span>
              </a>
              <div
                class="nav-pf-tertiary-nav"
              >
                <div
                  class="nav-item-pf-header"
                >
                  <span>
                    Item 1-B
                  </span>
                </div>
                <ul
                  class="list-group"
                >
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-B-i
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-B-ii
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-B-iii
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </li>
            <li
              class="tertiary-nav-item-pf list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 1-B-2
                </span>
              </a>
              <div
                class="nav-pf-tertiary-nav"
              >
                <div
                  class="nav-item-pf-header"
                >
                  <span>
                    Item 1-B-2
                  </span>
                </div>
                <ul
                  class="list-group"
                >
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-B-i
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-B-ii
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-B-iii
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </li>
            <li
              class="list-group-item"
            >
              <span
                class="vertical-sub-header-pf"
              >
                Divider 2
              </span>
            </li>
            <li
              class="tertiary-nav-item-pf list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 1-D
                </span>
              </a>
              <div
                class="nav-pf-tertiary-nav"
              >
                <div
                  class="nav-item-pf-header"
                >
                  <span>
                    Item 1-D
                  </span>
                </div>
                <ul
                  class="list-group"
                >
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-D-i
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-D-ii
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 1-D-iii
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
      <li
        class="list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-shield"
            title="Dolor"
          />
          <span
            class="list-group-item-value"
          >
            Dolor
          </span>
        </a>
      </li>
      <li
        class="secondary-nav-item-pf list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-space-shuttle"
            title="Ipsum"
          />
          <span
            class="list-group-item-value"
          >
            Ipsum
          </span>
        </a>
        <div
          class="nav-pf-secondary-nav"
        >
          <div
            class="nav-item-pf-header"
          >
            <span>
              Ipsum
            </span>
          </div>
          <ul
            class="list-group"
          >
            <li
              class="list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-A
                </span>
              </a>
            </li>
            <li
              class="list-group-item"
            >
              <a
                href="http://www.patternfly.org"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-B (external link)
                </span>
              </a>
            </li>
            <li
              class="tertiary-nav-item-pf list-group-item"
            >
              <a
                href="#"
              >
                <span
                  class="list-group-item-value"
                >
                  Item 3-C
                </span>
              </a>
              <div
                class="nav-pf-tertiary-nav"
              >
                <div
                  class="nav-item-pf-header"
                >
                  <span>
                    Item 3-C
                  </span>
                </div>
                <ul
                  class="list-group"
                >
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-C-i
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-C-ii
                      </span>
                    </a>
                  </li>
                  <li
                    class="list-group-item"
                  >
                    <a
                      href="#"
                    >
                      <span
                        class="list-group-item-value"
                      >
                        Item 3-C-iii
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </li>
          </ul>
        </div>
      </li>
      <li
        class="list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-paper-plane"
            title="Amet"
          />
          <span
            class="list-group-item-value"
          >
            Amet
          </span>
        </a>
      </li>
      <li
        class="list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-graduation-cap"
            title="Adipscing"
          />
          <span
            class="list-group-item-value"
          >
            Adipscing
          </span>
        </a>
      </li>
      <li
        class="list-group-item"
      >
        <a
          href="#"
        >
          <span
            class="fa fa-gamepad"
            title="Lorem"
          />
          <span
            class="list-group-item-value"
          >
            Lorem
          </span>
        </a>
      </li>
    </ul>
  </div>,
]
`;
